# checkpoint9

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/config/: Pre_approach.rviz
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
attach_shelf_srv/: CMakeLists.txt  package.xml
my_components/: CMakeLists.txt  package.xml
my_components/config/: Pre_approach.rviz
my_components/include/my_components/: approach_client_component.hpp  approach_server_component.hpp  pre_approach_component.hpp  visibility_control.h
my_components/launch/: attach_to_shelf.launch.py  preapproach_component.launch.py
my_components/src/: approach_client_component.cpp  approach_server_component.cpp  pre_approach_component.cpp  server_manual_composition.cpp
